client/src/stylesheets/game/phases/investment/TimeBlockMeter.scss
.status-o {
  height: 0.75rem;
  flex-grow: 1;
  position: relative;
  @include make-center;
  justify-content: space-between;

  .progress {
    height: 100%;
    width: 100%;
    margin: 0 0.125rem;
    background-color: $space-gray;
    border-radius: 0;
  }

  .fader {
    height: 100%;
    width: 0%;
    margin: 0 0.125rem;
    position: absolute;
    top: 0;
    right: 0;
    background-color: $space-lightgray;
    transition: all 0.15s ease-in-out;
  }
}

